# eventosBackend

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_baseline.py  0002_user_profile_linkedin_nascimento.py  0003_user_profile_expansao_perfil.py  0003_user_profile_expansao_perfil.sql  0004_index_eventos_status_data.py  0005_eventos_created_by.py  0006_eventos_status_revisao.py  0007_eventos_motivo_recusa.py
app/: main.py
app/core/: config.py  exceptions.py  logging.py  security.py  telemetry.py
app/db/: session.py
app/integrations/: github.py  supabase_auth_client.py  supabase_storage.py
app/models/: __init__.py  audit_log.py  comunidade.py  contribuinte.py  evento.py  evento_tag.py  galeria.py  tag.py  user_profile.py  user_role.py
app/rbac/: permissions.py  roles.py
app/repositories/: audit_repository.py  comunidade_repository.py  contribuinte_repository.py  evento_repository.py  galeria_repository.py  tag_repository.py  user_repository.py
app/routers/: audit.py  auth.py  communities.py  contributors.py  dashboard.py  events.py  gallery.py  github.py  meta.py  tags.py  users.py
app/schemas/: audit.py  auth.py  comunidade.py  contribuinte.py  dashboard.py  evento.py  galeria.py  github.py  tag.py  user.py
app/services/: audit_service.py  (+9 more)
docs/: OBSERVABILIDADE.md
scripts/: fetch-env.ps1  fetch-env.sh
tests/: conftest.py  test_dashboard.py  test_event_date.py  test_events.py  test_rbac.py  test_slug.py  test_tags.py
(+4 files in other folders)
